# nn-playground

./: Cargo.toml  README.md
benches/: network_benchmark.rs
src/: README.md  generic_test_case.rs  graph.rs  layer.rs  lib.rs  main.rs  network.rs  network_traits.rs  networks.rs  node.rs  path.rs  pt1.rs  pt1_5.rs  pt2.rs  pt2_5.rs  pt3.rs  run.rs  run_game.rs  traits.rs
src/cases/: game.rs  simple.rs
src/cases/game/: paper_scissors_rock.rs  play.rs  tik_tak_toe.rs  tik_tak_toes.rs
src/cases/simple/: and.rs  math_linear.rs  math_quadratic.rs  or.rs  or_and.rs  xor.rs
src/network1/: README.md  layer.rs  mod.rs  network.rs  node.rs
src/networks/: README.md  activation_functions.rs
src/networks/network1/: network.rs  node.rs
src/networks/network2/: layer.rs  network.rs
src/networks/network3/: README.md  layer.rs  network.rs
src/traits/: generic_game_case.rs  generic_test_case.rs  network_traits.rs
