[package]
name = "nn-playground"
version = "0.1.0"
edition = "2021"



[dependencies]
rand = "0.8.4"
anyhow = "1.0.44"
clap = { version = "4.4.4", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
plotters = "0.3.5"

minifb = "0.23.0"

[dev-dependencies]
criterion = { version = "0.4"}

[[bench]]
name = "network_benchmark"
harness = false
